--- a/Hamzabaloch/style.css
+++ b/Hamzabaloch/style.css
@@ -1,5 +1,200 @@
-*{
+* {
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+}
+
+body{
+    background-color: black !important;
+}
+
+.nav{
+    width: 100%;
+}
+
+.nav-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 30px;
+    background-color: rgb(41, 41, 41);
+}
+
+.nav-content>h1:first-child {
+    color: rgb(0, 162, 255);
+}
+
+.nav-content>ul {
+    display: flex;
+    gap: 50px;
+}
+
+.nav-content>ul>img{
+    display: none !important;
+}
+
+.nav-items {
+    list-style-type: none;
+    color: rgb(54, 144, 185);
+    cursor: pointer;
+}
+
+/* navbar mediaquery */
+
+@media only screen and (max-width: 425px) {
+    .nav-content>h1:first-child {
+        color: rgb(0, 162, 255);
+        font-size: 20px;
+    }
+    
+    .nav-content>ul {
+        display: flex;
+        justify-content: end;
+        align-items: center !important;
+        margin-top: 10px;
+    }
+    
+    .nav-items {
+        display: none !important;
+        
+    }
+    .nav-content>ul>img{
+        display: flex !important;
+        align-items: center !important;
+        width: 12%;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .nav-content>ul>img{
+        width: 15%;
+    }
+}
+
+ /* main section */
+
+ .carousel{
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+    object-fit: contain;
+ }
+
+ .carousel-item>img{
+    width: 100%;
+    height: 30rem;
+    object-fit: contain;
+ }
+
+ .cards{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
+    gap: 30px;
+    place-content: center;
+    margin-top: 50px;
+    margin-bottom: 40px;
+ }
+
+ .cards>img{
+    width: 100% !important;
+ }
+
+
+ footer {
+    background-color: #fff;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 70px;
+}
+
+.sec1>h1:first-child {
+    font-family: 'Segoe UI';
+    color: #3563e9;
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.sec1>p:last-child {
+    color: #797979;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+.sec2 {
+    display: flex;
+    gap: 0px 90px;
+}
+
+.sec2>ul {
+    list-style-type: none;
+}
+
+.sec2>ul>h2 {
+    cursor: pointer;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+}
+
+.sec2>ul>li {
+    color: #797979;
+    line-height: 30px;
+    font-size: 15px;
+    transition: all 0.2s linear;
+}
+
+.sec2>ul>li:hover{
+    cursor: pointer;
+    color: #4b4b4b;
+    text-decoration: underline;
+}
+
+.sec3 {
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 50px;
+}
+
+.sec3>h1 {
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.sec3>h1>span {
+    padding: 0 30px;
+}
+
+@media only screen and (max-width: 768px){
+    .footer {
+        padding: 30px 0px;
+    }
+}
+
+@media only screen and (max-width: 425px){
+    .footer {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+
+    .sec1>h1:first-child {
+        font-size: 2.2rem;
+        margin-bottom: 15px;
+    }
+    
+    .sec1>p:last-child {
+        font-size: 1rem;
+    }
+    
+    .sec2 {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }  
 }
